feat : todo 삭제 기능 추가

--- a/week02/DevDoc-01.ipynb
+++ b/week02/DevDoc-01.ipynb
@@ -11,11 +11,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2주차 실습하며 만든 To-Do 리스트를 활용해서\n",
-    "\n",
-    "1. 컴포넌트 분리 (Button과 Input)\n",
-    "2. 스타일링 (className을 활용해서)"
+    "2주차 실습하며 만든 To-Do 리스트를 활용해서"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "컴포넌트 분리\n",
+    "1. button\n",
+    " - 삭제하기\n",
+    " - 수정진행 (수정할 텍스박스 생성 및 수성완료 버튼)\n",
+    "\n",
+    "2. input 컴포넌트\n",
+    " - input에 작성한 내용 반영"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
